--- a/README
+++ b/README
@@ -5,6 +5,7 @@
 
 Please find the documentation in ./doc.
 You are welcome to report any bugs to <tensorutils@gmail.com>.
+Please visit <https://github.com/TensorUtils/TensorUtils> for the latest version.
 
 ###################################################################################################
 # License
